--- a/index.html
+++ b/index.html
@@ -6461,24 +6461,6 @@ Conteúdo Bloqueado 🔒.
 
 <script src="js/latest.js" data-utmify-prevent-xcod-sck="" data-utmify-prevent-subids="" async="" defer=""></script> 
 
-<script>
-  window.googlePixelId = "67e3fc3df432a353e4a9a456";
-  var a = document.createElement("script");
-  a.setAttribute("async", "");
-  a.setAttribute("defer", "");
-  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel-google.js");
-  document.head.appendChild(a);
-</script>
-
-<!-- TARCISIO -->
-<script>
-  window.pixelId = "66f46e9a69e84de401f8772f";
-  var a = document.createElement("script");
-  a.setAttribute("async", "");
-  a.setAttribute("defer", "");
-  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
-  document.head.appendChild(a);
-</script>
-
+LOCAL PIXEL
 
 </body></html>
