--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <script>
-    var urlBackRedirect = 'https://go.perfectpay.com.br/PPU38CPOUP7'; // lembre-se de usar a url sem espaços
+    var urlBackRedirect = 'https://checkoutwhats.netlify.app/'; // lembre-se de usar a url sem espaços
     // não altere nada abaixo dessa linha
     urlBackRedirect = urlBackRedirect = urlBackRedirect.trim() +
             (urlBackRedirect.indexOf("?") > 0 ? '&' : '?') +
