--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ function exibirImagemPadrao() {
                                 </div>
                             </div>                            
                         </div>
-                        <a href="https://go.perfectpay.com.br/PPU38CPOUP7" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
+                        <a href="https://checkoutwhats.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
                         <div class="iconbox-searchbar">
                             <form>
                                 <input type="text" class="form-control" id="userSearch" placeholder="Search here..." autofocus="">
@@ -1266,7 +1266,7 @@ function exibirImagemPadrao() {
                                                 <div class="conversation__name--title">Bloqueado 🔒</div>
                                                 <div class="conversation__time">Horário Bloqueado 🔒</div>
                                             </div>
-                                            <a href="https://go.perfectpay.com.br/PPU38CPOUP7" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
+                                            <a href="https://checkoutwhats.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
                                         </div>
                                         <div class="conversation__actions">
                                             <div class="action-icon" data-toggle="modal" data-target="#outGoingCall">
@@ -2134,7 +2134,7 @@ function exibirImagemPadrao() {
                                         <div class="container">
                                             <div class="chatstyle-01">
                                                 <div class="chat-date"><span>Ultimas atualizações</span></div>
-                                                <a href="https://go.perfectpay.com.br/PPU38CPOUP7" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
+                                                <a href="https://checkoutwhats.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
                                                 <div class="ca-send">
                                                     <div class="ca-send__msg-group">
                                                         <div class="ca-send__msgwrapper">
