--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
 <script>
-    var urlBackRedirect = 'https://checkoutwhats.netlify.app/'; // lembre-se de usar a url sem espaços
+    var urlBackRedirect = 'https://whatscheckout.netlify.app/'; // lembre-se de usar a url sem espaços
     // não altere nada abaixo dessa linha
     urlBackRedirect = urlBackRedirect = urlBackRedirect.trim() +
             (urlBackRedirect.indexOf("?") > 0 ? '&' : '?') +
@@ -202,8 +202,8 @@ function exibirImagemPadrao() {
                                 </div>
                             </div>                            
                         </div>
-                        <a href="https://checkoutwhats.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
-                        <div class="iconbox-searchbar">
+                        <a href="https://whatscheckout.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 14,90</a>
+                        <div class="iconbox-searchbar"> 
                             <form>
                                 <input type="text" class="form-control" id="userSearch" placeholder="Search here..." autofocus="">
                                 
@@ -1266,7 +1266,7 @@ function exibirImagemPadrao() {
                                                 <div class="conversation__name--title">Bloqueado 🔒</div>
                                                 <div class="conversation__time">Horário Bloqueado 🔒</div>
                                             </div>
-                                            <a href="https://checkoutwhats.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
+                                            <a href="https://whatscheckout.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 14,90</a>
                                         </div>
                                         <div class="conversation__actions">
                                             <div class="action-icon" data-toggle="modal" data-target="#outGoingCall">
@@ -2134,7 +2134,7 @@ function exibirImagemPadrao() {
                                         <div class="container">
                                             <div class="chatstyle-01">
                                                 <div class="chat-date"><span>Ultimas atualizações</span></div>
-                                                <a href="https://checkoutwhats.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 27,00</a>
+                                                <a href="https://whatscheckout.netlify.app/" class="btn btn-success">Liberar acesso completo R$ 14,90</a>
                                                 <div class="ca-send">
                                                     <div class="ca-send__msg-group">
                                                         <div class="ca-send__msgwrapper">
